# SM_2D

./: .clauderc  .gitignore  .run_simulation  CLAUDE.md  CMakeLists.txt  Makefile.test  PHASE_0_CHECKLIST.md  PHASE_0_COMPLETE.md  PHASE_0_SUMMARY.md  PHASE_4_CHECKLIST.md  PHASE_4_SUMMARY.md  README.md  a.out  batch_config.yaml  batch_plot.py  batch_run.py  compare_with_validation.py  debug_k2  debug_k2.cpp  debug_range  debug_range.cpp  dose_70MeV_2D.txt  energy_loss_dose.csv  gpu_output.txt  heuristic_review.toon  output.txt  output_debug.txt  output_full.txt  output_message.txt  pdd_70MeV.txt  plot_validation_pdd.py  run_simulation  run_simulation.cpp  sim.ini  stopping_power.txt  tags  test_a.ini  test_b.ini  test_boundary  test_boundary.cpp  (+12 more)
.claude/: rules.md
.omc/: project-memory.json
.omc/sessions/: 102da107-1766-4c66-b5d0-c898262b8ba8.json  28e11abd-2832-4215-8c9c-90d5cd08ab70.json  418fd732-7ad7-40fe-8507-a4dbe3e42ecf.json  4b2c85fc-c9a0-4c13-adb8-9231e2847fa7.json  9f3e2402-47f4-4bce-a9a1-7dc28954e6e8.json
.omc/state/: agent-replay-028fe4e1-2884-455d-8d6a-3c44e575e84e.jsonl  agent-replay-102da107-1766-4c66-b5d0-c898262b8ba8.jsonl  agent-replay-28e11abd-2832-4215-8c9c-90d5cd08ab70.jsonl  agent-replay-39713563-a916-4f29-a4a3-9a2ae89bad7b.jsonl  agent-replay-418fd732-7ad7-40fe-8507-a4dbe3e42ecf.jsonl  agent-replay-4b2c85fc-c9a0-4c13-adb8-9231e2847fa7.jsonl  agent-replay-9f3e2402-47f4-4bce-a9a1-7dc28954e6e8.jsonl  agent-replay-dfbb9bcc-5873-4c8c-878e-225fbad6aab6.jsonl  subagent-tracking.json
.opencode/: opencode.db-shm  opencode.db-wal
.sisyphus/: debug_history.md
Typst_syntax/: role.md  typst_symbols.yaml  typst_syntax.yaml
build_new/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  run_simulation
build_new/results/: dose_2d.txt  pdd.txt
build_new/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sm2d_tests[1]_include.cmake
config/: proton_150MeV_gaussian.ini  proton_200MeV_scattered.ini  proton_70MeV_pencil.ini
cuda/kernels/: k1_activemask.cuh  k3_finetransport.cu  k3_finetransport.cuh  k4_transfer.cu  k4_transfer.cuh  k5_audit.cu  k5_audit.cuh  k6_swap.cuh
data/lut/: README.md
data/nist/: README.md  pstar_water.txt
dbg/: H5_stopping_power_investigation.md  H5_summary.txt  H6_MCS_investigation_report.md  bug_discovery_report.md  debug_history.md  report.md  report_lateral_spreading_20260129.md  report_lateral_spreading_ROOT_CAUSE.md
debug_context/: 00_SUMMARY.md  01_physics_implementation_analysis.md  02_physics_usage_analysis.md  03_pipeline_logic_analysis.md  04_unclear_areas_and_debug.md  05_file_reference.md
docs/: .bkit-memory.json  .pdca-status.json  MCS_revision_plan_2D.md  PLAN_MCS.md  PLAN_MCS_K2.md  SPEC.md  bug_report_duplicate_mu_division.md  code-review.md  diagn.md  issues.md  refactor_code.md  remaining.md  root_cause_analysis.md
docs/.pdca-snapshots/: snapshot-1770083339885.json  snapshot-1770377610433.json  snapshot-1770428596817.json  snapshot-1770881111720.json
docs/03-analysis/: lateral_spreading_fixes.analysis.md  mcs2-phase-b.iteration2.md  spec_implementation_gap_analysis.md
docs/04-report/: changelog.md  mcs2-phase-b.report.md  spec_implementation_gap_analysis.report.md
docs/BK/: DEV_PLAN.md  diagnose_report.md  issue_analysis.md  refactor_code.md  revision_history.md  (+1 more)
results/: debug_cells_iter_00_initial.csv  debug_cells_iter_01_after_K4.csv  debug_cells_iter_02_after_K4.csv  debug_cells_iter_03_after_K4.csv  debug_cells_iter_04_after_K4.csv  debug_cells_iter_05_after_K4.csv  debug_cells_iter_06_after_K4.csv  debug_cells_iter_07_after_K4.csv  debug_cells_iter_08_after_K4.csv  debug_cells_iter_09_after_K4.csv  debug_cells_iter_100_after_K4.csv  debug_cells_iter_10_after_K4.csv  debug_cells_iter_150_after_K4.csv  debug_cells_iter_200_after_K4.csv  debug_cells_iter_250_after_K4.csv  debug_cells_iter_50_after_K4.csv  debug_channels_totals_iter01.csv  debug_ps_raw_iter_00_initial.csv  debug_ps_raw_iter_01_after_K4.csv  debug_ps_raw_iter_02_after_K4.csv  debug_ps_raw_iter_03_after_K4.csv  debug_ps_raw_iter_04_after_K4.csv  debug_ps_raw_iter_05_after_K4.csv  debug_ps_raw_iter_06_after_K4.csv  debug_ps_raw_iter_07_after_K4.csv  debug_ps_raw_iter_08_after_K4.csv  debug_ps_raw_iter_09_after_K4.csv  debug_ps_raw_iter_100_after_K4.csv  debug_ps_raw_iter_10_after_K4.csv  debug_ps_raw_iter_150_after_K4.csv  debug_ps_raw_iter_200_after_K4.csv  debug_ps_raw_iter_50_after_K4.csv  dose_2d.txt  dose_2d_150MeV.txt  dose_2d_pure_pencil.txt  pdd.txt  pdd_pure_pencil.txt
results_fe_test/: dose_2d.txt  pdd.txt
scripts/: verify_phase4.sh
tests/: CMakeLists.txt  test_all.cpp  test_simple.cpp
tests/audit/: test_cell_energy_audit.cpp  test_cell_weight_audit.cpp  test_global_budget.cpp  test_reporting.cpp
tests/boundary/: test_boundaries.cpp  test_loss_tracking.cpp
tests/gpu/: test_energy_loss_only_gpu.cu  test_k5_drop_channels_gpu.cu
tests/integration/: README.md
tests/kernels/: test_k1_activemask.cpp  test_k3_finetransport.cpp
tests/perf/: test_kernel_profiling.cpp  test_memory_profiling.cpp  test_occupancy.cpp
tests/physics/: README.md
tests/source/: test_gaussian.cpp  test_pencil.cpp
tests/unit/: test_block_encoding.cpp  test_buckets.cpp  test_build_system.cpp  test_cuda_smoke.cpp  test_grids.cpp  test_highland.cpp  test_local_bins.cpp  test_logging.cpp  test_memory_budget.cpp  test_memory_pool.cpp  test_memory_preflight.cpp  test_nuclear.cpp  test_psi_storage.cpp  test_r_lut.cpp  test_step_control.cpp  test_transport_config.cpp
tests/validation/: README.md  test_bragg_peak.cpp  test_determinism.cpp  test_lateral_spread.cpp  test_pencil_beam.cpp  test_validation_report.cpp
tools/: run_pdd.cpp  test_config.cpp
validation/: DELIVERY.md  README.md  analyze_angular_divergence.py  analyze_beam_size.py  compare_sm2d_moqui.py  comparison_result.md  energy_loss_dose.csv  gpu_compare.ini  gpu_compare_sigma38.ini  gpu_compare_sigma38_600.ini  gpu_compare_sigma38_verbose.ini  plot_proton_dose.py  proton_dose_E150MeV.csv  proton_transport_water.py  test_physics.py  visualize_raw.py
(+270 files in other folders)
